--- a/WMS/Views/Theme/Default/TenantWebsites/Create.cshtml
+++ b/WMS/Views/Theme/Default/TenantWebsites/Create.cshtml
@@ -129,9 +129,9 @@
                 </div>
             </div>
             <div class="input-group h-100 justify-content-center align-items-center">
-                @Html.LabelFor(model => model.FeaturedTagId,  htmlAttributes: new { @class = "control-label col-md-4" })
+                @Html.LabelFor(model => model.FeaturedTagId, htmlAttributes: new { @class = "control-label col-md-4" })
                 <div class="col-md-8">
-                   @Html.DropDownListFor(model => model.FeaturedTagId, ViewBag.ProductTag as SelectList, "Select Tag", htmlAttributes: new { @class = "form-control chosen-select" })
+                    @Html.DropDownListFor(model => model.FeaturedTagId, ViewBag.ProductTag as SelectList, "Select Tag", htmlAttributes: new { @class = "form-control chosen-select" })
                     @Html.ValidationMessageFor(model => model.FeaturedTagId, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -153,8 +153,6 @@
                     </div>
                 </div>
             </div>
-
-
         </div>
         <div class="col-md-6 p-0 pull-left mb-2">
 
@@ -212,12 +210,10 @@
             </div>
 
             <div class="input-group h-100 justify-content-center align-items-center">
-                @Html.LabelFor(model => model.IsActive, htmlAttributes: new { @class = "control-label col-md-4" })
+                @Html.LabelFor(model => model.ContactReceiverEmail, htmlAttributes: new { @class = "control-label col-md-4" })
                 <div class="col-md-8">
-                    <div class="checkbox">
-                        @Html.EditorFor(model => model.IsActive)
-                        @Html.ValidationMessageFor(model => model.IsActive, "", new { @class = "text-danger" })
-                    </div>
+                    @Html.EditorFor(model => model.ContactReceiverEmail, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.ContactReceiverEmail, "", new { @class = "text-danger" })
                 </div>
             </div>
 
@@ -233,12 +229,23 @@
                     </div>
                 </div>
             </div>
+
             <div class="input-group h-100 justify-content-center align-items-center">
                 @Html.LabelFor(model => model.ShowPricesIncludingTax, htmlAttributes: new { @class = "control-label col-md-4" })
                 <div class="col-md-8">
                     <div class="checkbox">
                         @Html.EditorFor(model => model.ShowPricesIncludingTax)
                         @Html.ValidationMessageFor(model => model.ShowPricesIncludingTax, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+            </div>
+
+            <div class="input-group h-100 justify-content-center align-items-center">
+                @Html.LabelFor(model => model.IsActive, htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
+                    <div class="checkbox">
+                        @Html.EditorFor(model => model.IsActive)
+                        @Html.ValidationMessageFor(model => model.IsActive, "", new { @class = "text-danger" })
                     </div>
                 </div>
             </div>
