--- a/WMS/Views/Theme/Default/TenantWebsites/Edit.cshtml
+++ b/WMS/Views/Theme/Default/TenantWebsites/Edit.cshtml
@@ -214,12 +214,10 @@
             </div>
 
             <div class="input-group h-100 justify-content-center align-items-center">
-                @Html.LabelFor(model => model.IsActive, htmlAttributes: new { @class = "control-label col-md-4" })
+                @Html.LabelFor(model => model.ContactReceiverEmail, htmlAttributes: new { @class = "control-label col-md-4" })
                 <div class="col-md-8">
-                    <div class="checkbox">
-                        @Html.EditorFor(model => model.IsActive)
-                        @Html.ValidationMessageFor(model => model.IsActive, "", new { @class = "text-danger" })
-                    </div>
+                    @Html.EditorFor(model => model.ContactReceiverEmail, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.ContactReceiverEmail, "", new { @class = "text-danger" })
                 </div>
             </div>
 
@@ -252,12 +250,23 @@
                     </div>
                 </div>
             </div>
+
             <div class="input-group h-100 justify-content-center align-items-center">
                 @Html.LabelFor(model => model.ShowPricesIncludingTax, htmlAttributes: new { @class = "control-label col-md-4" })
                 <div class="col-md-8">
                     <div class="checkbox">
                         @Html.EditorFor(model => model.ShowPricesIncludingTax)
                         @Html.ValidationMessageFor(model => model.ShowPricesIncludingTax, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+            </div>
+
+            <div class="input-group h-100 justify-content-center align-items-center">
+                @Html.LabelFor(model => model.IsActive, htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
+                    <div class="checkbox">
+                        @Html.EditorFor(model => model.IsActive)
+                        @Html.ValidationMessageFor(model => model.IsActive, "", new { @class = "text-danger" })
                     </div>
                 </div>
             </div>
