--- a/WarehouseEcommerce/Views/Theme/University/Shared/_wishlistItems.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_wishlistItems.cshtml
@@ -33,7 +33,7 @@
                                         <div class="custom-control custom-switch">
                                             @if (!Ganedata.Core.Services.Inventory.IsProductInNotifyList(@item.ProductMaster, ViewBag.CurrentUserId))
                                             {
-                                            <a href="javascript:;" class="notify-btn wishlist-table-btns" onclick="addNotifyProductAvailibility(@item.ProductId)" id="notification-bell_@item.ProductId" title="NOTIFY ME WHEN AVAILABLE" style="font-size: 28px;"><i class="fa fa-bell-o list-icon"></i></a>
+                                            <a href="javascript:;" class="notify-btn wishlist-table-btns" onclick="addNotifyProductAvailibility(@item.ProductId)" id="notification-bell_@item.ProductId" title="NOTIFY ME WHEN AVAILABLE" style="font-size: 28px; color: black"><i class="fa fa-bell-o list-icon"></i></a>
                                             }
                                             else
                                             {
